# type_adapt_example

./: CMakeLists.txt  README.md  package.xml
include/type_adapt_example/: cv_mat_sensor_msgs_image_type_adapter.hpp  image_pub_no_type_adapt_node.hpp  image_pub_type_adapt_intra_node.hpp  image_pub_type_adapt_node.hpp  image_sub_no_type_adapt_node.hpp  image_sub_type_adapt_intra_node.hpp  image_sub_type_adapt_node.hpp
launch/: image_no_type_adapt-composed-launch.py  image_no_type_adapt-launch.py  image_type_adapt-composed-launch.py  image_type_adapt-launch.py  image_type_adapt_intra-composed-launch.py  image_type_adapt_intra-launch.py
src/: cv_mat_sensor_msgs_image_type_adapter.cpp  image_pub_no_type_adapt_node.cpp  image_pub_type_adapt_intra_node.cpp  image_pub_type_adapt_node.cpp  image_sub_no_type_adapt_node.cpp  image_sub_type_adapt_intra_node.cpp  image_sub_type_adapt_node.cpp
